# plutoniumm

./: .gitattributes  .gitignore  CNAME  Cargo.toml  LICENSE  README.md  article.css  article.js  atomic.css  code.html  color.css  dev.html  faq.html  global.css  index.html  links.html  manifest.json  mistake.js  notes.html  operator.html  p.html  package.json  papers.html  password.html  pnpm-lock.yaml  qml.html  renovate.json  repos.html  svelte.config.js  t.html  test.html  test.md  tsconfig.json  ui.html  unsuck.js  vite-manifest.json  vite.config.js
_app/: error.svelte-60fa5603.js  error.svelte-77ab595a.js  error.svelte-aaa2ecf8.js  error.svelte-df5e3ac0.js  error.svelte-e49d4682.js  manifest.json  start-6e5e464a.js  start-97eb9c5e.js  start-a58ac785.js  start-c1562e43.js  start-cdb3d2d3.js  start-faeba540.js  version.json
components/: card.svelte  hero.svelte  progress.svelte  project.svelte  table.svelte
css/: atomic.scss  global.css  global.scss  p.css  ytvjs.css
data/: papers.json  patch  posts.json
docs/: atomic.css.html  index.ts  mistake.js.html  tex.md
github/: getGit.js  stats.json
notes/: __data.json  tex.html
operator/: __data.json  tex.html
p/: __data.json  covering-bases.html  epsilon-delta.html  fractional-derivatives.html  shape-algebra.html  test.html
password/: __data.json
posts/: index.ts  junkyard.md  readme.md
public/: global.css  global.scss  index.html
qml/: w3.html  w3py.html  w4py.html
repos/: __data.json
scripts/: deploy.sh  images.js
src/: App.svelte  app.html  lib.rs  package.json
static/: CNAME  article.css  (+7 more)
(+880 files in other folders)
