[package]
name = "plutoniumm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.2.9", features = ["js"] }
pwbox = { version = "0.5.0", default-features = false, features = ["pure"] }
rand = "0.8.5"
rand_core = "0.6.4"
wasm-bindgen = {version = "0.2.84", features = ["serde-serialize"] }